apps/wiki/wiki-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiki
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - wiki.6j0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wiki
          port: 80
